<resources>
    <string name="app_name">RepairShop</string>
    <string name="name">Név</string>
    <string name="password">Jelszó</string>
    <string name="login">Bejelentkezés</string>
    <string name="registration">Regisztráció</string>
    <string name="user_name">Felhasználónév</string>
    <string name="email_address">E-mail cím</string>
    <string name="password_again">Jelszó megerősítése</string>
    <string name="cancel">Mégse</string>
    <string name="product_description">Termék leírása.</string>
    <string name="email_cim">E-mail cím</string>
    <string name="buy_button_text">Időpont foglalása</string>
</resources>